<?xml version="1.0" encoding="utf-8"?>
<FrameLayout xmlns:android="http://schemas.android.com/apk/res/android"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    >

    <TextView
        android:layout_gravity="center"
        android:background="@color/colorAccent"
        android:text="@string/textview1"
        android:layout_width="200dp"
        android:layout_height="200dp"
        android:id="@+id/textView5" />

    <TextView
        android:layout_gravity="center"
        android:background="@color/colorBlack"
        android:text="@string/textview2"
        android:textColor="@color/colorWhite"
        android:layout_width="150dp"
        android:layout_height="150dp"
        android:id="@+id/textView6" />

    <TextView
        android:layout_gravity="center"
        android:background="@color/colorPrimaryDark"
        android:text="@string/textview3"
        android:layout_width="100dp"
        android:layout_height="100dp"
        android:id="@+id/textView7" />

    <TextView
        android:layout_gravity="center"
        android:background="@color/colorPrimary"
        android:text="@string/textview4"
        android:layout_width="50dp"
        android:layout_height="50dp"
        android:id="@+id/textView8" />

    <ProgressBar
        style="?android:attr/progressBarStyle"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:id="@+id/progressBar2" />

</FrameLayout>
